Link SOIL library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ endif()
 find_library(GLEW_LIBRARY glew REQUIRED)
 set(LIBS ${LIBS} ${GLEW_LIBRARY})
 
+find_library(SOIL_LIBRARY soil REQUIRED)
+set(LIBS ${LIBS} ${SOIL_LIBRARY})
+
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
 target_link_libraries(${PROJECT_NAME} ${LIBS})
