Add SoLoud and mp3 decoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,11 @@ project(${PROJECT_NAME})
 
 set(CMAKE_CXX_STANDARD 14)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic -Wextra -fno-rtti")
 
-set(SOURCE_FILES ${CMAKE_SOURCE_DIR}/src/main.cpp)
+set(SOURCE_FILES
+    ${CMAKE_SOURCE_DIR}/src/main.cpp
+    ${CMAKE_SOURCE_DIR}/src/minimp3.c)
 
 if(APPLE)
     find_library(OPENGL_LIBRARY OpenGL)
@@ -24,6 +26,9 @@ set(LIBS ${LIBS} ${SOIL_LIBRARY})
 
 find_library(GLFW_LIBRARY glfw3 REQUIRED)
 set(LIBS ${LIBS} ${GLFW_LIBRARY})
+
+find_library(SOLOUD_LIBRARY soloud REQUIRED)
+set(LIBS ${LIBS} ${SOLOUD_LIBRARY})
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 
